# SPL_HW3_Server-Client

SPL_HW3_Server&Client/spl_hw3_client/: CMakeLists.txt  makefile
SPL_HW3_Server&Client/spl_hw3_client/include/: connectionHandler.h  encoder.h  main.h  our_decoder.h  our_listner.h  our_writer.h
SPL_HW3_Server&Client/spl_hw3_client/src/: connectionHandler.cpp  encoder.cpp  main.cpp  our_decoder.cpp  our_listner.cpp  our_writer.cpp
SPL_HW3_Server&Client/spl_hw3_server/src/main/java/bgu/spl/net/: Utils.java
SPL_HW3_Server&Client/spl_hw3_server/src/main/java/bgu/spl/net/api/: BGUSocialEncoderDecoder.java  BGUSocialProtocol.java  MessagingProtocol.java
SPL_HW3_Server&Client/spl_hw3_server/src/main/java/bgu/spl/net/impl/: BGUSocialConnections.java  ClientToServerMessage.java  Message.java  ServerToClientMessage.java
SPL_HW3_Server&Client/spl_hw3_server/src/main/java/bgu/spl/net/impl/BGSServer/: ReactorMain.java  TPCMain.java
SPL_HW3_Server&Client/spl_hw3_server/src/main/java/bgu/spl/net/impl/Messages/: AckMessage.java  BlockMessage.java  ErrorMessage.java  FollowMessage.java  LoginMessage.java  LogoutMessage.java  LogstatMessage.java  NotificationMessage.java  PMMessage.java  PostMessage.java  RegisterMessage.java  StatMessage.java
SPL_HW3_Server&Client/spl_hw3_server/src/main/java/bgu/spl/net/impl/db/: DB.java
SPL_HW3_Server&Client/spl_hw3_server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BidiMessagingProtocol.java  BlockingConnectionHandler.java  Connections.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
(+4 files in other folders)
